fix: code block highlighting and overflow

--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -1,3 +1,8 @@
 .dark img[alt="icon"] {
   filter: invert(1);
 }
+
+pre {
+  overflow-x: auto;
+  max-width: 100%;
+}
